[workspace]
resolver = "2"
members = [
    "core",
    "elf",
    "error",
    "fs",
    "ftp",
    "gmtx",
    "kernel",
    "llt",
    "macros",
    "param",
    "pfs",
    "pkg",
    "tls"
]

default-members = ["core", "kernel"]

[toolchain]
channel = "nightly"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
